-m new font + fixed repo alignment + more styles

--- a/src/style.css
+++ b/src/style.css
@@ -11,54 +11,31 @@
 }
 
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'Source Code Pro Italic';
   src: url('./assets/fonts/Source_Code_Pro/SourceCodePro-Italic-VariableFont_wght.ttf') format('truetype');
   font-weight: 200 900; /* Range of weights available in the variable font */
-  font-style: normal;
+  font-style: italic;
   font-display: swap;
 }
 
 @font-face {
 	font-family: "Hack";
 	src: url("./assets/fonts/hack/hack-regular-subset.woff2") format("woff2");
-	font-weight: 400;
+	font-weight: 500;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: "Hack";
+	font-family: "Hack Italic";
 	src: url("./assets/fonts/hack/hack-italic-subset.woff2") format("woff2");
-	font-weight: 400;
+	font-weight: 500;
 	font-style: italic;
 }
 
+/* Apply font-family globally */
 * {
-	font-family: Source Code Pro;
-	font-weight: 600;
-}
-
-:root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
-
-	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #170720;
-
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-a {
-	font-weight: 500;
-	color: #646cff;
-	text-decoration: inherit;
-}
-a:hover {
-	color: #535bf2;
+	font-family: 'Source Code Pro', monospace;
+	font-weight: 500; /* Normal weight by default */
 }
 
 body {
@@ -67,11 +44,26 @@ body {
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+	background-color: #170720;
+	color: rgba(255, 255, 255, 0.87);
 }
 
-h1 {
-	font-size: 3.2em;
-	line-height: 1.1;
+#app {
+	width: 100%;
+	padding: .5em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 800; /* Bold headings */
+}
+
+a {
+	font-weight: 600;
+	color: #646cff;
+	text-decoration: inherit;
+}
+a:hover {
+	color: #535bf2;
 }
 
 button {
@@ -79,7 +71,7 @@ button {
 	border: 1px solid transparent;
 	padding: 0.6em 1.2em;
 	font-size: 1em;
-	font-weight: 500;
+	font-weight: 600;
 	font-family: inherit;
 	background-color: #1a1a1a;
 	cursor: pointer;
@@ -91,30 +83,4 @@ button:hover {
 button:focus,
 button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-	padding: 2em;
-}
-
-#app {
-	font-family: "Source Code Pro";
-	font-weight: "bold";
-	max-width: 1280px;
-	margin: 0 auto;
-	/* padding: 2rem; */
-	/* text-align: center; */
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
 }
